Squished some bugs

--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,14 @@ body {
   margin: 200px auto;
 }
 .start {
+  font-family: 'Cardo', serif;
+  line-height: 1.5em;
+  width: 100px;
   background-color: white;
   border: 2px solid black;
   float: right;
-  margin-right: -100px;
+  margin-right: -150px;
+  font-size: 18px;
 }
 .black-keys {
   margin-left: 26px;
